--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a class="nav-link" href="#planner">Planificador</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#nosotros">Nosotros</a>
+            <a class="nav-link" href="#nosotros">Enciclopedia</a>
           </li>
         </ul>
         <ul class="navbar-nav">
@@ -131,7 +131,7 @@
         id="nosotros"
         class="row py-5"
         style="
-          background-image: url('nosotros-bg.jpg');
+          background-image: url('/img/enciclo.avif');
           background-size: cover;
           background-repeat: no-repeat;
           background-position: center;
