--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         id="planner"
         class="row py-10"
         style="
-          background-image: url('/img/planner1.webp');
+          background-image: url('/img/planner1.png');
           background-size: cover;
           background-repeat: no-repeat;
           background-position: center;
